force-app/main/default/objects/AQMD_District__c/AQMD_District__c.object-meta.xml
<CustomObject>
    <description>District information related to AQMD</description>
    <label>AQMD District</label>
    <nameField>
        <label>AQMD District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AQMD Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>