force-app/main/default/objects/AQMD_District__c/fields/AQMD_Universal_Warning_Label_Required__c.field-meta.xml
<CustomField>
    <fullName>AQMD_Universal_Warning_Label_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check of AQMD Universal Warning Label is required</description>
    <label>AQMD Universal Warning Label Required</label>
    <type>Checkbox</type>
</CustomField>