force-app/main/default/objects/AQMD_District__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any comment related to AQMD District</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>