force-app/main/default/objects/AQMD_District__c/fields/District_Air_Permit_Required__c.field-meta.xml
<CustomField>
    <fullName>District_Air_Permit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a district air permit is required</description>
    <label>District Air Permit Required</label>
    <type>Checkbox</type>
</CustomField>