force-app/main/default/objects/AQMD_District__c/fields/District_Approver_Required__c.field-meta.xml
<CustomField>
    <fullName>District_Approver_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if District Approver is required</description>
    <label>District Approver Required</label>
    <type>Checkbox</type>
</CustomField>