force-app/main/default/objects/AQMD_District__c/fields/Exempt_Use_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Use_Form_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if an Exempt User Form is required</description>
    <label>Exempt Use Form Required</label>
    <type>Checkbox</type>
</CustomField>