force-app/main/default/objects/AQMD_District__c/fields/Solvent_Regulated__c.field-meta.xml
<CustomField>
    <fullName>Solvent_Regulated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if solvent is regulated</description>
    <label>Solvent Regulated</label>
    <type>Checkbox</type>
</CustomField>