force-app/main/default/objects/AQMD_District__c/fields/System_One_Label_Required__c.field-meta.xml
<CustomField>
    <fullName>System_One_Label_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a System One label is required</description>
    <label>System One Label Required</label>
    <type>Checkbox</type>
</CustomField>