force-app/main/default/objects/AQMD_District__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AQMD_Universal_Warning_Label_Required__c</columns>
    <columns>District_Air_Permit_Required__c</columns>
    <columns>District_Approver_Required__c</columns>
    <columns>Exempt_Use_Form_Required__c</columns>
    <columns>Solvent_Regulated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>